# mathGame

./: README.md
backend/: .env  Cargo.toml
backend/migrations/: 20240915213500_users.sql
backend/src/: main.rs  questions.rs  structs.rs
math_game/: bun.lockb  package.json
math_game/src/app/: globals.css  layout.tsx  page.tsx
math_game/src/app/play/[difficulty]/: page.tsx
math_game/src/components/: QuestionDisplayer.tsx
